Add LightSensor class
This class represents a digital lightsensor, it works as follows:

- The pin is initialized (exported, waited for permission change from
udev
- The pin direction is set to Out, which in turn sets its value to Low
- The capacitors are now being charged, when they're charge enough,
value will go from Low to High
- We monitor the value and record the brightness when it changes to High
- We now reset the pin by switching direction to Out (sets value to
Low), and then to In
- ... and we wait again

See also:
* https://www.raspberrypi.org/learning/physical-computing-with-python/ldr/
* https://learn.adafruit.com/basic-resistor-sensor-reading-on-raspberry-pi/basic-photocell-reading
* https://pimylifeup.com/raspberry-pi-light-sensor/

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,7 @@
 set(kgpio_SRCS
     kgpio.cpp
     gpiopin.cpp
+    lightsensor.cpp
 #     kar.cpp
 #     kcompressiondevice.cpp
 #     kfilterbase.cpp
@@ -62,6 +63,7 @@ ecm_generate_headers(KGpio_HEADERS
     HEADER_NAMES
     KGpio
     GpioPin
+    LightSensor
     REQUIRED_HEADERS KGpio_HEADERS
 )
 
