small test app to test if writing actually happens sync
... it doesn't for *certain* files in sysfs' gpio class. :/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ ecm_setup_version(${KF5_VERSION}
 
 add_subdirectory(src)
 add_subdirectory(autotests)
-#add_subdirectory(tests)
+add_subdirectory(tests)
 
 
 # create a Config.cmake and a ConfigVersion.cmake file and install them
