add a thermometer sensor
This uses the digital thermometer.

The value is read through the sysfs interface
/sys/bus/w1/devices/$id/w1_slave .

Needs modprobe w1_therm to work!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ set(kgpio_SRCS
     kgpio.cpp
     gpiopin.cpp
     lightsensor.cpp
+    thermosensor.cpp
 #     kar.cpp
 #     kcompressiondevice.cpp
 #     kfilterbase.cpp
