Factor out lightsensortest

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -15,6 +15,11 @@ ecm_add_tests(
 )
 
 ecm_add_tests(
+    testlightsensor.cpp
+    LINK_LIBRARIES KF5::Gpio Qt5::Test
+)
+
+ecm_add_tests(
     testthermosensor.cpp
     LINK_LIBRARIES KF5::Gpio Qt5::Test
 )
